Compilador/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> NAME EQUALS expression
Rule 2     statement -> expression
Rule 3     statement -> PRINT LPAREN string RPAREN
Rule 4     string -> STRING
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression EXPONENTE expression
Rule 10    expression -> expression COMPARISON expression
Rule 11    expression -> expression LOGICOS expression
Rule 12    expression -> expression MODULO expression
Rule 13    expression -> MINUS expression
Rule 14    expression -> CONSTANTES
Rule 15    expression -> LPAREN expression RPAREN
Rule 16    expression -> NUMBER
Rule 17    expression -> NAME
Rule 18    statement -> WHILE expression POINTS expression
Rule 19    statement -> WHILE expression POINTS statement

Terminals, with rules where they appear

COMPARISON           : 10
CONSTANTES           : 14
DIVIDE               : 8
EQUALS               : 1
EXPONENTE            : 9
LOGICOS              : 11
LPAREN               : 3 15
MINUS                : 6 13
MODULO               : 12
NAME                 : 1 17
NUMBER               : 16
PLUS                 : 5
POINTS               : 18 19
PRINT                : 3
RPAREN               : 3 15
STRING               : 4
TIMES                : 7
WHILE                : 18 19
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 15 18 18 19
statement            : 19 0
string               : 3

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . NAME EQUALS expression
    (2) statement -> . expression
    (3) statement -> . PRINT LPAREN string RPAREN
    (18) statement -> . WHILE expression POINTS expression
    (19) statement -> . WHILE expression POINTS statement
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    NAME            shift and go to state 5
    PRINT           shift and go to state 4
    WHILE           shift and go to state 2
    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1

    statement                      shift and go to state 3
    expression                     shift and go to state 6

state 1

    (16) expression -> NUMBER .

    POINTS          reduce using rule 16 (expression -> NUMBER .)
    PLUS            reduce using rule 16 (expression -> NUMBER .)
    MINUS           reduce using rule 16 (expression -> NUMBER .)
    TIMES           reduce using rule 16 (expression -> NUMBER .)
    DIVIDE          reduce using rule 16 (expression -> NUMBER .)
    EXPONENTE       reduce using rule 16 (expression -> NUMBER .)
    COMPARISON      reduce using rule 16 (expression -> NUMBER .)
    LOGICOS         reduce using rule 16 (expression -> NUMBER .)
    MODULO          reduce using rule 16 (expression -> NUMBER .)
    $end            reduce using rule 16 (expression -> NUMBER .)
    RPAREN          reduce using rule 16 (expression -> NUMBER .)


state 2

    (18) statement -> WHILE . expression POINTS expression
    (19) statement -> WHILE . expression POINTS statement
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 10

state 3

    (0) S' -> statement .



state 4

    (3) statement -> PRINT . LPAREN string RPAREN

    LPAREN          shift and go to state 12


state 5

    (1) statement -> NAME . EQUALS expression
    (17) expression -> NAME .

    EQUALS          shift and go to state 13
    PLUS            reduce using rule 17 (expression -> NAME .)
    MINUS           reduce using rule 17 (expression -> NAME .)
    TIMES           reduce using rule 17 (expression -> NAME .)
    DIVIDE          reduce using rule 17 (expression -> NAME .)
    EXPONENTE       reduce using rule 17 (expression -> NAME .)
    COMPARISON      reduce using rule 17 (expression -> NAME .)
    LOGICOS         reduce using rule 17 (expression -> NAME .)
    MODULO          reduce using rule 17 (expression -> NAME .)
    $end            reduce using rule 17 (expression -> NAME .)


state 6

    (2) statement -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    $end            reduce using rule 2 (statement -> expression .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 19
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 15
    EXPONENTE       shift and go to state 14
    COMPARISON      shift and go to state 20
    LOGICOS         shift and go to state 17
    MODULO          shift and go to state 16


state 7

    (15) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 22

state 8

    (14) expression -> CONSTANTES .

    POINTS          reduce using rule 14 (expression -> CONSTANTES .)
    PLUS            reduce using rule 14 (expression -> CONSTANTES .)
    MINUS           reduce using rule 14 (expression -> CONSTANTES .)
    TIMES           reduce using rule 14 (expression -> CONSTANTES .)
    DIVIDE          reduce using rule 14 (expression -> CONSTANTES .)
    EXPONENTE       reduce using rule 14 (expression -> CONSTANTES .)
    COMPARISON      reduce using rule 14 (expression -> CONSTANTES .)
    LOGICOS         reduce using rule 14 (expression -> CONSTANTES .)
    MODULO          reduce using rule 14 (expression -> CONSTANTES .)
    $end            reduce using rule 14 (expression -> CONSTANTES .)
    RPAREN          reduce using rule 14 (expression -> CONSTANTES .)


state 9

    (13) expression -> MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 23

state 10

    (18) statement -> WHILE expression . POINTS expression
    (19) statement -> WHILE expression . POINTS statement
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    POINTS          shift and go to state 24
    PLUS            shift and go to state 21
    MINUS           shift and go to state 19
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 15
    EXPONENTE       shift and go to state 14
    COMPARISON      shift and go to state 20
    LOGICOS         shift and go to state 17
    MODULO          shift and go to state 16


state 11

    (17) expression -> NAME .

    POINTS          reduce using rule 17 (expression -> NAME .)
    PLUS            reduce using rule 17 (expression -> NAME .)
    MINUS           reduce using rule 17 (expression -> NAME .)
    TIMES           reduce using rule 17 (expression -> NAME .)
    DIVIDE          reduce using rule 17 (expression -> NAME .)
    EXPONENTE       reduce using rule 17 (expression -> NAME .)
    COMPARISON      reduce using rule 17 (expression -> NAME .)
    LOGICOS         reduce using rule 17 (expression -> NAME .)
    MODULO          reduce using rule 17 (expression -> NAME .)
    $end            reduce using rule 17 (expression -> NAME .)
    RPAREN          reduce using rule 17 (expression -> NAME .)


state 12

    (3) statement -> PRINT LPAREN . string RPAREN
    (4) string -> . STRING

    STRING          shift and go to state 25

    string                         shift and go to state 26

state 13

    (1) statement -> NAME EQUALS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 27

state 14

    (9) expression -> expression EXPONENTE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 28

state 15

    (8) expression -> expression DIVIDE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 29

state 16

    (12) expression -> expression MODULO . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 30

state 17

    (11) expression -> expression LOGICOS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 31

state 18

    (7) expression -> expression TIMES . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 32

state 19

    (6) expression -> expression MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 33

state 20

    (10) expression -> expression COMPARISON . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 34

state 21

    (5) expression -> expression PLUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 11

    expression                     shift and go to state 35

state 22

    (15) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    RPAREN          shift and go to state 36
    PLUS            shift and go to state 21
    MINUS           shift and go to state 19
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 15
    EXPONENTE       shift and go to state 14
    COMPARISON      shift and go to state 20
    LOGICOS         shift and go to state 17
    MODULO          shift and go to state 16


state 23

    (13) expression -> MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    POINTS          reduce using rule 13 (expression -> MINUS expression .)
    PLUS            reduce using rule 13 (expression -> MINUS expression .)
    MINUS           reduce using rule 13 (expression -> MINUS expression .)
    TIMES           reduce using rule 13 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 13 (expression -> MINUS expression .)
    EXPONENTE       reduce using rule 13 (expression -> MINUS expression .)
    COMPARISON      reduce using rule 13 (expression -> MINUS expression .)
    LOGICOS         reduce using rule 13 (expression -> MINUS expression .)
    MODULO          reduce using rule 13 (expression -> MINUS expression .)
    $end            reduce using rule 13 (expression -> MINUS expression .)
    RPAREN          reduce using rule 13 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 21 ]
  ! MINUS           [ shift and go to state 19 ]
  ! TIMES           [ shift and go to state 18 ]
  ! DIVIDE          [ shift and go to state 15 ]
  ! EXPONENTE       [ shift and go to state 14 ]
  ! COMPARISON      [ shift and go to state 20 ]
  ! LOGICOS         [ shift and go to state 17 ]
  ! MODULO          [ shift and go to state 16 ]


state 24

    (18) statement -> WHILE expression POINTS . expression
    (19) statement -> WHILE expression POINTS . statement
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EXPONENTE expression
    (10) expression -> . expression COMPARISON expression
    (11) expression -> . expression LOGICOS expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . MINUS expression
    (14) expression -> . CONSTANTES
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . NUMBER
    (17) expression -> . NAME
    (1) statement -> . NAME EQUALS expression
    (2) statement -> . expression
    (3) statement -> . PRINT LPAREN string RPAREN
    (18) statement -> . WHILE expression POINTS expression
    (19) statement -> . WHILE expression POINTS statement

    MINUS           shift and go to state 9
    CONSTANTES      shift and go to state 8
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 1
    NAME            shift and go to state 39
    PRINT           shift and go to state 4
    WHILE           shift and go to state 2

    expression                     shift and go to state 38
    statement                      shift and go to state 37

state 25

    (4) string -> STRING .

    RPAREN          reduce using rule 4 (string -> STRING .)


state 26

    (3) statement -> PRINT LPAREN string . RPAREN

    RPAREN          shift and go to state 40


state 27

    (1) statement -> NAME EQUALS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    $end            reduce using rule 1 (statement -> NAME EQUALS expression .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 19
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 15
    EXPONENTE       shift and go to state 14
    COMPARISON      shift and go to state 20
    LOGICOS         shift and go to state 17
    MODULO          shift and go to state 16


state 28

    (9) expression -> expression EXPONENTE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    POINTS          reduce using rule 9 (expression -> expression EXPONENTE expression .)
    PLUS            reduce using rule 9 (expression -> expression EXPONENTE expression .)
    MINUS           reduce using rule 9 (expression -> expression EXPONENTE expression .)
    TIMES           reduce using rule 9 (expression -> expression EXPONENTE expression .)
    DIVIDE          reduce using rule 9 (expression -> expression EXPONENTE expression .)
    EXPONENTE       reduce using rule 9 (expression -> expression EXPONENTE expression .)
    COMPARISON      reduce using rule 9 (expression -> expression EXPONENTE expression .)
    LOGICOS         reduce using rule 9 (expression -> expression EXPONENTE expression .)
    MODULO          reduce using rule 9 (expression -> expression EXPONENTE expression .)
    $end            reduce using rule 9 (expression -> expression EXPONENTE expression .)
    RPAREN          reduce using rule 9 (expression -> expression EXPONENTE expression .)

  ! PLUS            [ shift and go to state 21 ]
  ! MINUS           [ shift and go to state 19 ]
  ! TIMES           [ shift and go to state 18 ]
  ! DIVIDE          [ shift and go to state 15 ]
  ! EXPONENTE       [ shift and go to state 14 ]
  ! COMPARISON      [ shift and go to state 20 ]
  ! LOGICOS         [ shift and go to state 17 ]
  ! MODULO          [ shift and go to state 16 ]


state 29

    (8) expression -> expression DIVIDE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    POINTS          reduce using rule 8 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 8 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 8 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 8 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 8 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 8 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 8 (expression -> expression DIVIDE expression .)
    EXPONENTE       shift and go to state 14
    COMPARISON      shift and go to state 20
    LOGICOS         shift and go to state 17
    MODULO          shift and go to state 16

  ! EXPONENTE       [ reduce using rule 8 (expression -> expression DIVIDE expression .) ]
  ! COMPARISON      [ reduce using rule 8 (expression -> expression DIVIDE expression .) ]
  ! LOGICOS         [ reduce using rule 8 (expression -> expression DIVIDE expression .) ]
  ! MODULO          [ reduce using rule 8 (expression -> expression DIVIDE expression .) ]
  ! PLUS            [ shift and go to state 21 ]
  ! MINUS           [ shift and go to state 19 ]
  ! TIMES           [ shift and go to state 18 ]
  ! DIVIDE          [ shift and go to state 15 ]


state 30

    (12) expression -> expression MODULO expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EXPONENTE expression
    (10) expression -> expression . COMPARISON expression
    (11) expression -> expression . LOGICOS expression
    (12) expression -> expression . MODULO expression

    POINTS          reduce using rule 12 (expression -> expression MODULO expression .)
    PLUS            reduce using rule 12 (expression -> expression MODULO expression .)
    MINUS           reduce using rule 12 (expression -> expression MODULO expression .)
    TIMES           reduce using rule 12 (expression -> expression MODULO expression .)
    DIVIDE          reduce using rule 12 (expression -> expression MODULO expression .)
    COMPARISON      reduce using rule 12 (expression -> expression MODULO expression .)
    LOGICOS         reduce using rule 12 (expression -> expression MODULO expression .)
    MODULO          reduce using rule 12 (expression -> expression MODULO expression .)
    $end            reduce using rule 12 (expression -> expression MODULO expression .)
    RPAREN          reduce using rule 12 (expression -> expression MODULO expression .)
    EXPONENTE       shift and go to state 14

  ! EXPONENTE       [ reduce using rule 12 (expression -> expression MODULO expression .) ]
  ! PLUS            [ shift and go to state 21 ]
  ! MINUS           [ shift and go to state 19 ]
  ! TIMES           [ shift and go to state 18 ]
  ! DIVIDE          [ shift and go to state 15 ]
  ! COMPARISON      [ shift and go to state 20 ]
  ! LOGICOS         [ shift and go to state 17 ]
  ! MODULO          [ shift and go to state 16 ]


state 31
